--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="fonts/style.css">
+    <title>Principe Fresco</title>
+</head>
+
+<body>
+
+    <nav class="navbar navbar-light" style="background-color: #ffffff;">
+        <div class="container-fluid">
+            <a class="nav-item nav-link" href="index.html" id="prince">PRINCIPE FRESCO</a>
+                <a class="nav-item nav-link" href="shop.html" id="shop">SHOP</a>
+                <a class="nav-item nav-link" href="#" id="coll">COLLECTIONS</a>
+                <a span class="icon-user" href="user.html" id="user"></span></a>
+                <a span class="icon-cart" href="cart.html" id="cart"></span></a>
+                
+        </div>
+    </nav>
+
+    <div class="slider">
+        <ul>
+            <li><img src="https://res.cloudinary.com/dcht8jc4n/image/upload/v1642201510/PrincipeFresco/prenda1_aeazbm.png"
+                    alt=""></li>
+            <li><img src="https://res.cloudinary.com/dcht8jc4n/image/upload/v1642201435/PrincipeFresco/prenda2_zwcku9.png"
+                    alt=""></li>
+            <li><img src="https://res.cloudinary.com/dcht8jc4n/image/upload/v1642201438/PrincipeFresco/prenda3_fp8h1q.png"
+                    alt=""></li>
+            <li><img src="https://res.cloudinary.com/dcht8jc4n/image/upload/v1642201442/PrincipeFresco/prenda4_xuz0lk.png"
+                    alt=""></li>
+        </ul>
+    </div>
+
+    <div class="footer">
+    <center>
+        <h3 class="text-center" id="prince">PRINCIPE FRESCO</h3>
+        <a span class="icon-youtube" href="#" id="youtube"></span></a>&nbsp;&nbsp;&nbsp;
+        <a span class="icon-facebook2" href="#" id="facebook"></span></a>
+    </center>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
+        <script src="" type="module"></script>
+</body>
+
+</html>
