cambio en estilos, inclusion codigo js para pagina shop.html

--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-light" style="background-color: #ffffff;">
         <div class="container-fluid">
-            <a class="nav-item nav-link" href="index.html" id="prince">PRINCIPE FRESCO</a>
+            <a class="nav-item " href="index.html" id="prince">PRINCIPE FRESCO</a>
                 <a class="nav-item nav-link" href="shop.html" id="shop">SHOP</a>
                 <a class="nav-item nav-link" href="#" id="coll">COLLECTIONS</a>
                 <a span class="icon-user" href="user.html" id="user"></span></a>
