--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="fonts/style.css">
     <title>Principe Fresco</title>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-light" style="background-color: #ffffff;">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top" style="background-color: #ffffff;">
         <div class="container-fluid">
-            <a class="nav-item nav-link" href="index.html" id="prince">PRINCIPE FRESCO</a>
+            <a class="nav-item nav-link" href="index.html" id="prince"><img style="width: 70%;" src="./img/Príncipe fresco.png" alt="logo"></a>
                 <a class="nav-item nav-link" href="shop.html" id="shop">SHOP</a>
-                <a class="nav-item nav-link" href="#" id="coll">COLLECTIONS</a>
+    
                 <a span class="icon-user" href="user.html" id="user"></span></a>
                 <a span class="icon-cart" href="cart.html" id="cart"></span></a>
                 
         </div>
     </nav>
-
-    <div class="slider">
+    <br><br>
+    <div class="slider mt-5">
         <ul>
             <li><img src="https://res.cloudinary.com/dcht8jc4n/image/upload/v1642201510/PrincipeFresco/prenda1_aeazbm.png"
                     alt=""></li>
@@ -40,7 +40,7 @@
 
     <div class="footer">
     <center>
-        <h3 class="text-center" id="prince">PRINCIPE FRESCO</h3>
+        <h3 class="text-center" id="prince"><img style="width: 10%;"src="./img/Príncipe fresco.png" alt=""></h3>
         <a span class="icon-youtube" href="#" id="youtube"></span></a>&nbsp;&nbsp;&nbsp;
         <a span class="icon-facebook2" href="#" id="facebook"></span></a>
     </center>
