--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="en">
 
 <head>
@@ -7,32 +7,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./style/shop.css">
     <link rel="stylesheet" href="fonts/style.css">
     <title>Principe Fresco</title>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-light" style="background-color: #ffffff;">
+    <nav class="navbar navbar-light fixed-top" style="background-color: #ffffff;">
         <div class="container-fluid">
-            <a class="nav-item nav-link" href="index.html" id="prince">PRINCIPE FRESCO</a>
-                <a class="nav-item nav-link" href="shop.html" id="shop">SHOP</a>
-                <a class="nav-item nav-link" href="#" id="coll">COLLECTIONS</a>
-                <a span class="icon-user" href="user.html" id="user"></span></a>
-                <a span class="icon-cart" href="cart.html" id="cart"></span></a>
+            <a class="nav-item nav-link" href="index.html" id="prince"><img style="width: 70%;" src="./img/Príncipe fresco.png" alt=""></a>
+                <a class="nav-item nav-link" href="./shop.html" id="shop">SHOP</a>
+                <a span class="icon-user" href="./user.html" id="user"></span></a>
+                <a span class="icon-cart" href="./pages/cart.html" id="cart"></span></a>
                 
         </div>
     </nav>
+    <br><br>
 
+    <div style="width: 80%; padding: 3%; margin: auto; display: flex; flex-direction: row;" id="cont" class="container">
+        
+    </div>
+
+    <div id="banner"></div>
+
+    <div class="footer">
+        <center>
+            <h3 class="text-center" id="prince"><img style="width: 10%;"src="./img/Príncipe fresco.png" alt=""></h3>
+            <a span class="icon-youtube" href="#" id="youtube"></span></a>&nbsp;&nbsp;&nbsp;
+            <a span class="icon-facebook2" href="#" id="facebook"></span></a>
+        </center>
+        </div>
+
+        <!-- ============SCRIPTS============ -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
 
-    <script src="" type="module"></script>
+    <script src="./script/shop.js" type="module"></script>
 </body>
 
 </html>
