Agregando estilos a users.html, corrigiendo tamaño de banner en todas las paginas html

--- a/pages/Crown Sweatshirt.html
+++ b/pages/Crown Sweatshirt.html
@@ -23,7 +23,7 @@
     <!-- -------------------banner-------------- -->
     <div id="wrapper">
         <center>
-        <img style="width: 100vw;" src="https://res.cloudinary.com/dw4dh7nkd/image/upload/v1642310410/bla/prince_uhze9q.png" alt="">
+        <img style="width: 100%;" src="https://res.cloudinary.com/dw4dh7nkd/image/upload/v1642310410/bla/prince_uhze9q.png" alt="">
     </center>
     </div>
 
