--- a/shop.html
+++ b/shop.html
@@ -19,22 +19,21 @@
             <a class="nav-item nav-link" href="index.html" id="prince"><img style="width: 70%;" src="./img/Príncipe fresco.png" alt=""></a>
                 <a class="nav-item nav-link" href="./shop.html" id="shop">SHOP</a>
                 <a span class="icon-user" href="./user.html" id="user"></span></a>
-                <a span class="icon-cart" href="./pages/cart.html" id="cart"></span></a>
-                
+                <a span class="icon-cart" href="./pages/cart.html" id="cart"></span></a> 
         </div>
     </nav>
     <br><br>
 
     <div style="width: 80%; padding: 3%; margin: auto; display: flex; flex-direction: row;" id="cont" class="container">
-        <h4 ></h4>
+        
     </div>
-
+<!---------------------BANNER ---------------->
     <div id="wrapper">
         <center>
-        <img style="width: 100vw;" src="https://res.cloudinary.com/dw4dh7nkd/image/upload/v1642310410/bla/prince_uhze9q.png" alt="">
+        <img style="width: 100%;" src="https://res.cloudinary.com/dw4dh7nkd/image/upload/v1642310410/bla/prince_uhze9q.png" alt="">
     </center>
     </div>
-
+    <!-- -----------------------------FOOTER-------------------------->
     <div class="footer bottom">
         <center>
             <h3 class="text-center" id="prince"><img style="width: 10%;"src="./img/Príncipe fresco.png" alt=""></h3>
