Agregando pagina individual de crown.html con su respectivo CSS y JS

--- a/shop.html
+++ b/shop.html
@@ -23,9 +23,9 @@
         </div>
     </nav>
     <br><br>
-
+<!-- --------------------CARDS-------------------- -->
     <div style="width: 80%; padding: 3%; margin: auto; display: flex; flex-direction: row;" id="cont" class="container">
-        
+        <h4></h4>
     </div>
 <!---------------------BANNER ---------------->
     <div id="wrapper">
