--- a/user.html
+++ b/user.html
@@ -47,7 +47,7 @@
                     <textarea id="inputObservaciones" class="form-control mt-2" autoComplete="off" name="observaciones" placeholder="Observaciones" required></textarea>
 
                     <div class="d-grid gap-2 mx-auto mt-2">
-                        <input value="Enviar" type="button" class="btn " />
+                        <input value="Registrarse" type="button" class="btn " />
                     </div>
                 </form>
             </div>
