se vincula script en html y se corrige nombre de base de datos

--- a/user.html
+++ b/user.html
@@ -77,7 +77,7 @@
         crossorigin="anonymous"></script>
 
  
-        <script src=""></script>
+        <script src="./data/bdUsuarios.json" type="module"></script>
 </body>
 
 </html>
