--- a/pages/Crown Sweatshirt.html
+++ b/pages/Crown Sweatshirt.html
@@ -15,14 +15,23 @@
 <body>
     <nav class="navbar navbar-light fixed-top" style="background-color: #ffffff;">
         <div class="container-fluid">
-            <a class="nav-item nav-link" href="index.html" id="prince"><img style="width: 70%;"
+            <a class="nav-item nav-link" href="../index.html" id="prince"><img style="width: 70%;"
                     src="../img/Príncipe fresco.png" alt=""></a>
             <a class="nav-item nav-link" href="../shop.html" id="shop">SHOP</a>
             <a span class="icon-user" href="../user.html" id="user"></span></a>
-            <a span class="icon-cart" href="../pages/cart.html" id="cart"></span></a>
+            <a span class="icon-cart" href="#popup" id="cart"></span></a>
         </div>
     </nav>
     <br><br>
+    <div id="popup">
+        <div id="body">
+            <a href="#" id="cerrar">&times;</a> 
+            <ul id="cont-carrito">
+                
+                </ul><hr>
+            
+        </div>
+    </div>
     <!-- ============================MAIN ======================> -->
     <main id="main" class="mt-15 p-2" col-3>
         <!-- ---CARDS 1 --------->
