--- a/shop.html
+++ b/shop.html
@@ -19,10 +19,19 @@
             <a class="nav-item nav-link" href="index.html" id="prince"><img style="width: 70%;" src="./img/Príncipe fresco.png" alt=""></a>
                 <a class="nav-item nav-link" href="./shop.html" id="shop">SHOP</a>
                 <a span class="icon-user" href="./user.html" id="user"></span></a>
-                <a span class="icon-cart" href="./pages/cart.html" id="cart"></span></a> 
+                <a span class="icon-cart" href="#popup" id="cart"></span></a>
         </div>
     </nav>
     <br><br>
+    <div id="popup">
+        <div id="body">
+            <a href="#" id="cerrar">&times;</a> 
+            <ul id="cont-carrito">
+                
+                </ul><hr>
+            
+        </div>
+    </div>
 <!-- --------------------CARDS-------------------- -->
     <div style="width: 80%; padding: 3%; margin: auto; display: flex; flex-direction: row;" id="cont" class="container">
         <h4></h4>
