configurando funcionamiento de carrito y local storage de el resto de paginas individuales

--- a/pages/Crown Sweatshirt.html
+++ b/pages/Crown Sweatshirt.html
@@ -33,7 +33,7 @@
                     
                     
                     <ul id="cont-carrito" class="modal-body">
-
+                        <div><a class="btn btn-primary">Pagar</a></div>
                     </ul>
                 </div>
             </div>
